# MyObject

./: README.md  配置文件.yaml  颜色定义列表.txt
E-dictionary/: Makefile.cpp  SQLite3.cpp  client.cpp  database.cpp  sever.cpp
FPS/: CMakeLists.txt  FPS.cpp  OneLoneCoder_ComandLineFPS_2.cpp  OneLoneCoder_CommandLineFPS.cpp  README_运行与调试.md  olcConsoleGameEngine.h
FPS_MovementTest/: FPS_MovementTest.cpp
GTAmini/: CMakeLists.txt  LICENSE  README.md
GTAmini/assets/: map.txt
GTAmini/assets/fonts/: README.txt
GTAmini/assets/sounds/: README.txt
GTAmini/include/: Entity.h  Game.h  Map.h  NPC.h  Player.h  Projectile.h  Vehicle.h  Weapon.h
GTAmini/src/: Entity.cpp  Game.cpp  Map.cpp  NPC.cpp  Player.cpp  Projectile.cpp  Vehicle.cpp  Weapon.cpp  main.cpp
Gobang/: CMakeLists.txt  Gobang.cpp  Gobang_Simple.cpp  README.md  ai.cpp  ai.h  board.cpp  board.h  build.bat  compile.bat  compile_msvc.bat  game.cpp  game.h  main.cpp  五子棋游戏.bat  在线编译说明.md  安装说明.txt
Gomoku/: index.html  main.js  package-lock.json
LAN ChatRoom/HHClient/: ChatDialog.cpp  ChatDialog.h  ChatItem.cpp  ChatWidget.cpp  CreateGroupDialog.cpp  CreateGroupDialog.h  FriendItem.cpp  FriendItem.h  GroupChatDialog.cpp  GroupChatDialog.h  HHClient.pro  HHClient.pro.user.6e2c360  HHClient.pro.user.931c610  HHClient.pro.user.cc81b2a  HHClient.pro.user.cf7f436  HHTcpSocket.cpp  HHTcpSocket.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MsgMarke.cpp  MsgMarke.h  MsgMarke.ui  RegisterDialog.cpp  RegisterDialog.h  SearchGroupDialog.cpp  SearchGroupDialog.h  chatdialog.ui  creategroupdialog.ui  frienditem.ui  groupchatdialog.ui  logindialog.ui  main.cpp  mainwindow.ui  registerdialog.ui  searchgroupdialog.ui
LAN ChatRoom/HHServer/: HHServer.pro.user.6e2c360  HHServer.pro.user.931c610  HHServer.pro.user.cc81b2a  HHServer.pro.user.cf7f436  MainWindow.cpp  NetworkThread.cpp  NetworkThread.h  TcpServerForThread.cpp  TcpServerForThread.h  UserDao.cpp  UserDao.h  UserEntity.h
LAN ChatRoom/QQChat/build-clientDayAll-Desktop_Qt_5_4_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_friendlist.h  ui_mainwidget.h  ui_msgmark.h  ui_registordialog.h
LAN ChatRoom/QQChat/build-clientDayAll-Desktop_Qt_5_4_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release  object_script.demo3Single.Debug  object_script.demo3Single.Release  ui_chatdialog.h  ui_onefriend.h
LAN ChatRoom/QQChat/build-serverDayAll-Desktop_Qt_5_4_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.server.Debug  object_script.server.Release  usrData.db
LAN ChatRoom/QQChat/build-serverDayAll-Desktop_Qt_5_4_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release  usrData.db
LAN ChatRoom/QQChat/clientdayAll/: chatdialog.cpp  chatdialog.h  chatdialog.ui  clientDayAll.pro  friendlist.cpp  friendlist.h  friendlist.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  msgmark.cpp  msgmark.h  msgmark.ui  onefriend.cpp  onefriend.h  (+7 more)
RacerCar/: RacerCar.cpp  olcConsoleGameEngine.h
Recive-Send/: App.cpp  App.xaml  MainWindow.cpp  MainWindow.xaml  ReceiverWindow.cpp  ReceiverWindow.xaml  SenderWindow.cpp  SenderWindow.xaml
Retro FPS/Retro-First-Person-Shooter-Code-1-0-1-0/: Game.cpp  Game.h  main.cpp
RotatingShapes（PEGTinker平台）/: Readme.txt  RotatingCircle.cpp  RotatingSquare-1.cpp  RotatingSquare-2.cpp  RotatingStar.cpp  RotatingTriangle.cpp
Snake_game/: .gitignore  CMakeLists.txt  README.md  Snake_game.cpp  build_and_run.bat  build_with_mingw.bat  main.cpp
SuperCaculator/: CMakeLists.txt
SuperCaculator/include/: Expression.h  MainWindow.h  Numerics.h  Symbolic.h
SuperCaculator/src/: Expression.cpp  MainWindow.cpp  Numerics.cpp  Symbolic.cpp  main.cpp
SuperCaculator/ui/: MainWindow.ui
Tetris/: explain.txt  main.cpp
(+67 files in other folders)
